Added some more basic functionality to trigger different types of OOMs in java apps